[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib] 
# We could use anything here, but this follows the community convention
# you could also specify a library name using the `name` field. But, when unspecified it just
# uses the package.name above, which is what we want anyway
path = "src/lib.rs"

# Notice the [[]] here. This is an array in TOML syntax. We can only have one library in a project,
# but we can have multiple binaries! If you want to manage multiple libraries in the same 
# repo (hello monorepo) then you can look at the workspace feature -- more on that later. 
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ['derive']}

# dev-dependencies are used exclusively when running tests or examples, 
# they do not get included in the final application binary!
[dev-dependencies]
reqwest = "0.11"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# Because we're launching in WSL2 sometimes
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]
