[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib] 
# We could use anything here, but this follows the community convention
# you could also specify a library name using the `name` field. But, when unspecified it just
# uses the package.name above, which is what we want anyway
path = "src/lib.rs"

# Notice the [[]] here. This is an array in TOML syntax. We can only have one library in a project,
# but we can have multiple binaries! If you want to manage multiple libraries in the same 
# repo (hello monorepo) then you can look at the workspace feature -- more on that later. 
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = '1.0.115' 
config = { version = "0.13", default-features = false, features = ["yaml"]}
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
# dev-dependencies are used exclusively when running tests or examples, 
# they do not get included in the final application binary!
[dev-dependencies]
reqwest = "0.11"
once_cell = "1"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# Because we're launching in WSL2 sometimes
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate",
"offline"
]
